--- a/life_choices/app/views/layouts/_header.html.erb
+++ b/life_choices/app/views/layouts/_header.html.erb
@@ -3,9 +3,9 @@
 	<!-- Inner -->
 		<div class="inner">
 			<header>
-				<h1><a href="index.html" id="logo">Helios</a></h1>
+				<h1><a href="index.html" id="logo">Life Choices</a></h1>
 				<hr />
-				<p>Another fine freebie by HTML5 UP</p>
+				<p>The toughest game of would you rather</p>
 			</header>
 			<footer>
 				<a href="#banner" class="button circled scrolly">Start</a>
