--- a/life_choices/app/views/questions/index.html.erb
+++ b/life_choices/app/views/questions/index.html.erb
@@ -1,6 +1,7 @@
 <section id="banner">
   <header>
     <h2>Hi. You're looking at <strong>Helios</strong>.</h2>
+    <%= link_to "New Question", new_question_path, id: 'new_question_link', remote: true %>
   </header>
 </section>
 
