--- a/life_choices/app/views/layouts/_header.html.erb
+++ b/life_choices/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
 	<!-- Inner -->
 		<div class="inner">
 			<header>
-				<h1><a href="index.html" id="logo">Life Choices</a></h1>
+				<h1><a id="logo">Life Choices</a></h1>
 				<hr />
 				<p>The toughest game of would you rather</p>
 			</header>
@@ -15,7 +15,7 @@
 	<!-- Nav -->
 		<nav id="nav">
 			<ul>
-				<li><a href="index.html">Home</a></li>
+				<li><a href="/">Home</a></li>
 			</ul>
 		</nav>
 
